Convert all Credits & Comments keys to Extra
Also merged Credits_URL and Credits keys to create required REML for
Extra key.
Fixes following bug: TimeZone bias bug in Desc key - see issue #6

--- a/csdb/collection/date.ini
+++ b/csdb/collection/date.ini
@@ -7,7 +7,7 @@
 
 [AddDays]
 DescEx="<p>Adds the number of days, <var>Days</var>, to the given date, <var>DateTime</var> and returns the result.</p><p>To subtract days, pass a negative value for <var>Days</var>.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=DiffDays
 Snip=548.dat
 Delphi2=Y
@@ -53,7 +53,7 @@ FPC=Y
 
 [DateDay]
 Desc="Extracts the day of the month from a specified date."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateMonth,DateYear,DayOfYear
 TestInfo=advanced
@@ -78,7 +78,7 @@ FPC=Y
 
 [DateMonth]
 Desc="Extracts the month from a specified date."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateDay,DateYear,DaysInMonth,DateMonthEnd,DateMonthStart
 Snip=225.dat
@@ -102,7 +102,7 @@ FPC=Y
 
 [DateMonthEnd]
 Desc="Returns the last day of the month containing the given date."
-Comments="The date returned is midnight at the beginning of the last day of the month."
+Extra="<p>The date returned is midnight at the beginning of the last day of the month.</p>"
 Units=SysUtils
 SeeAlso=DateMonth,DateMonthStart,DaysInMonth
 Depends=DaysInMonth
@@ -128,8 +128,7 @@ FPC=Y
 
 [DateMonthStart]
 Desc="Returns the first day of the month containing the given date."
-Credits="Slightly modified from code contributed by Bill Miller."
-Comments="The date returned is midnight at the beginning of the first day of the month."
+Extra="<p>The date returned is midnight at the beginning of the first day of the month.</p><p>Slightly modified from code contributed by Bill Miller.</p>"
 Units="SysUtils"
 SeeAlso=DateMonth,DateMonthEnd
 TestInfo=advanced
@@ -154,7 +153,7 @@ FPC=Y
 
 [DateQuarter]
 Desc="Returns the number of the quarter containing a given date."
-Credits="Based on code contributed by Homolibere."
+Extra="<p>Based on code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarterStart,DateQuarterEnd
 TestInfo=advanced
@@ -179,7 +178,7 @@ FPC=Y
 
 [DateQuarterEnd]
 Desc="Gets the date of the last day of the quarter containing a given date."
-Credits="Modified from code contributed by Homolibere."
+Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterStart
 TestInfo=advanced
@@ -204,7 +203,7 @@ FPC=Y
 
 [DateQuarterStart]
 Desc="Gets the date of the first day of the quarter containing a given date."
-Credits="Modified from code contributed by Homolibere."
+Extra="<p>Modified from code contributed by Homolibere.</p>"
 Units=SysUtils
 SeeAlso=DateQuarter,DateQuarterEnd
 TestInfo=advanced
@@ -274,7 +273,7 @@ FPC=Y
 
 [DateYear]
 Desc="Extracts the year from a specified date."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateDay,DateMonth,IsLeapYear,DateYearStart,DateYearEnd
 Snip=226.dat
@@ -298,8 +297,7 @@ FPC=Y
 
 [DateYearEnd]
 Desc="Returns the last day of the year containing the specified date."
-Credits="Renamed routine from Bill Miller's snippets collection."
-Comments="The date returned is midnight at the beginning of the last day of the year."
+Extra="<p>The date returned is midnight at the beginning of the last day of the year.</p><p>Renamed routine from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=DateYear,DateYearStart
 TestInfo=advanced
@@ -324,8 +322,7 @@ FPC=Y
 
 [DateYearStart]
 Desc="Returns the first day of the year containing the specified date."
-Credits="Renamed from routine contributed by Bill Miller."
-Comments="The date returned is midnight at the beginning of the first day of the year."
+Extra="<p>The date returned is midnight at the beginning of the first day of the year.</p><p>Renamed from routine contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=DateYear,DateYearEnd
 TestInfo=advanced
@@ -350,7 +347,7 @@ FPC=Y
 
 [DayOfYear]
 Desc="Returns the day of the year for the given date."
-Credits="From Bill Miller's snippets collection."
+Extra="<p>From Bill Miller's snippets collection.</p>"
 Depends=DateYearStart
 SeeAlso=DateDay
 Snip=550.dat
@@ -398,7 +395,7 @@ FPC=Y
 
 [DiffDays]
 Desc="Returns the whole number of days separating two given dates."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=AddDays
 Snip=549.dat
 Delphi2=Y
@@ -421,7 +418,7 @@ FPC=Y
 
 [Is24HourTimeFormat]
 Desc="Checks if the 24 hour time format is being used by the current thread."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=SysUtils,Windows
 Snip=229.dat
 Delphi2=Y
@@ -444,7 +441,7 @@ FPC=N
 
 [IsDaylightSaving]
 Desc="Checks if current local time is daylight saving time."
-Comments="Raises exception if daylight saving information cannot be obtained from operating system."
+Extra="<p>Raises exception if daylight saving information cannot be obtained from operating system.</p>"
 Units=SysUtils,Windows
 Snip=230.dat
 Delphi2=N
@@ -467,7 +464,7 @@ FPC=Y
 
 [IsFriday]
 Desc="Checks if the given date is a Friday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=539.dat
@@ -491,7 +488,7 @@ FPC=Y
 
 [IsLeapYear]
 Desc="Checks if a specified date falls in a leap year."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Depends=DateYear
 SeeAlso=DateYear,DaysInMonth
 Snip=227.dat
@@ -515,7 +512,7 @@ FPC=Y
 
 [IsMonday]
 Desc="Checks if the given date is a Monday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=540.dat
@@ -539,7 +536,7 @@ FPC=Y
 
 [IsSaturday]
 Desc="Checks if the given date is a Saturday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=541.dat
@@ -563,7 +560,7 @@ FPC=Y
 
 [IsSunday]
 Desc="Checks if the given date is a Sunday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=542.dat
@@ -587,7 +584,7 @@ FPC=Y
 
 [IsThursday]
 Desc="Checks if the given date is a Thursday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=543.dat
@@ -611,7 +608,7 @@ FPC=Y
 
 [IsTuesday]
 Desc="Checks if the given date is a Tuesday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=544.dat
@@ -635,7 +632,7 @@ FPC=Y
 
 [IsValidDate]
 Desc="Checks if a string represents a valid date in the current locale."
-Credits="Inspired by code from Bill Miller's snippets collection."
+Extra="<p>Inspired by code from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=IsValidTime
 Snip=355.dat
@@ -659,7 +656,7 @@ FPC=Y
 
 [IsValidTime]
 Desc="Checks if a string represents a valid time in the current locale."
-Credits="Inspired by code from Bill Miller's snippets collection."
+Extra="<p>Inspired by code from Bill Miller's snippets collection.</p>"
 Units=SysUtils
 SeeAlso=IsValidDate
 Snip=356.dat
@@ -683,7 +680,7 @@ FPC=Y
 
 [IsWednesday]
 Desc="Checks if the given date is a Wednesday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday,IsWeekend
 Units=SysUtils
 Snip=545.dat
@@ -707,7 +704,7 @@ FPC=Y
 
 [IsWeekday]
 Desc="Checks if the given date is a weekday."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekend
 Units=SysUtils
 Snip=546.dat
@@ -731,7 +728,7 @@ FPC=Y
 
 [IsWeekend]
 Desc="Checks if the given date is a weekend."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=IsMonday,IsTuesday,IsWednesday,IsThursday,IsFriday,IsSaturday,IsSunday,IsWeekday
 Units=SysUtils
 Snip=547.dat
@@ -801,7 +798,7 @@ FPC=Y
 
 [SQLDateToDateTime]
 DescEx="Converts a date in SQL format into a <var>TDateTime</var>."
-Comments="Handles only the date component. Any time component is ignored."
+Extra="<p>Handles only the date component. Any time component is ignored.</p>"
 Units=SysUtils
 SeeAlso=SQLDate
 TestInfo=advanced
@@ -826,7 +823,7 @@ FPC=Y
 
 [TimeHour]
 Desc="Extracts the hour from a specified time."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeMin,TimeSec
 Snip=175.dat
@@ -850,7 +847,7 @@ FPC=Y
 
 [TimeMin]
 Desc="Extracts the minute from a specified time."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeHour,TimeSec
 Snip=176.dat
@@ -874,7 +871,7 @@ FPC=Y
 
 [TimeSec]
 Desc="Extracts the second from a specified time."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=TimeHour,TimeMin
 Snip=177.dat
@@ -897,9 +894,8 @@ Delphi10S=Y
 FPC=Y
 
 [TimeZoneBias]
-Desc="Gets the bias of the local time zone relative to UTC (GMT). Does not adjust for daylight saving time."
-Desc="<p>Gets the bias of the local time zone relative to UTC (GMT).</p><p>Does not adjust for daylight saving time.</p>"
-Credits="Adapted from code contributed by Bill Miller."
+DescEx="<p>Gets the bias of the local time zone relative to UTC (GMT).</p><p>Does not adjust for daylight saving time.</p>"
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils,Windows
 SeeAlso=AdjustedTimeZoneBias,TimeZoneName
 Snip=270.dat
@@ -923,7 +919,7 @@ FPC=Y
 
 [TimeZoneName]
 Desc="Returns a string containing the local time zone name or '' if the name is unknown."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils,Windows
 SeeAlso=TimeZoneBias
 Snip=271.dat
