--- a/csdb/collection/drive.ini
+++ b/csdb/collection/drive.ini
@@ -7,7 +7,7 @@
 
 [CurentDrive]
 Desc="Returns the letter that identifies the current drive."
-Credits="Modified from Bill Miller's snippets collection."
+Extra="<p>Modified from Bill Miller's snippets collection.</p>"
 Snip=352.dat
 Delphi2=Y
 Delphi3=Y
