--- a/csdb/collection/encoding.ini
+++ b/csdb/collection/encoding.ini
@@ -7,8 +7,7 @@
 
 [BytesToAnsiString]
 DescEx="Converts the given array of bytes to an ANSI raw byte string, which is returned. The returned string has the code page specified by <var>CodePage</var>."
-Credits="Based on code from the Stack Overflow posting [How can I convert TBytes to RawByteString?]."
-Credits_URL="http://stackoverflow.com/questions/773297/how-can-i-convert-tbytes-to-rawbytestring"
+Extra="<p>Based on code from the Stack Overflow posting <a href="http://stackoverflow.com/questions/773297/how-can-i-convert-tbytes-to-rawbytestring">How can I convert TBytes to RawByteString?</a>.</p>"
 Units=SysUtils
 Snip=359.dat
 Delphi2=N
