--- a/csdb/collection/file.ini
+++ b/csdb/collection/file.ini
@@ -30,7 +30,7 @@ FPC=Y
 
 [CopyFiles]
 DescEx="<p>Copies files from directory name <var>SrcDir</var> to directory named <var>DestDir</var>. Files to be copied are filtered using DOS wildcard mask in <var>WildCard</var>.</p><p>Sub-directories are not copied. <var>DestDir</var> must exist.</p>"
-Credits="Contributed by Jan Roza."
+Extra="<p>Contributed by Jan Roza.</p>"
 Units=Classes,SysUtils,Windows
 Depends=ListFiles,DirToPath
 SeeAlso=CopyFile
@@ -124,7 +124,7 @@ FPC=Y
 
 [DeleteFilesWithUndo]
 Desc="Deletes a list of files and sends them all to the recycle bin. Returns True if the files were deleted successfully and False if the function fails."
-Comments="If any of the listed files don't exist none will be deleted and the function will fail."
+Extra="<p>If any of the listed files don't exist none will be deleted and the function will fail.</p>"
 Units=Classes,ShellAPI
 Depends=StringsToMultiSz
 SeeAlso=EmptyRecycleBin,DeleteFiles,DeleteFileWithUndo
@@ -240,7 +240,7 @@ FPC=Y
 
 [FileSizeString]
 Desc="Returns the size of a file as a formatted string. For files larger than 1Kb the size is approximate. If the file size can't be read then the empty string is returned."
-Credits="Modification of code contributed by Michael Rockett."
+Extra="<p>Modification of code contributed by Michael Rockett.</p>"
 Units=SysUtils
 Depends=SizeOfFile64
 Snip=407.dat
@@ -333,7 +333,7 @@ FPC=Y
 
 [GetLastDirectory]
 Desc="Returns the last directory in a specified path or the empty string if the given path is not a directory."
-Credits="Modified from code contributed by Bill Miller."
+Extra="<p>Modified from code contributed by Bill Miller.</p>"
 Units=SysUtils
 Depends=IsDirectory,PathToDir
 Snip=408.dat
@@ -546,8 +546,7 @@ FPC=Y
 
 [IsValidFileName]
 Desc="Tests if a file name is a valid on Windows file systems."
-Credits="Based on information contained in the [File Names, Paths and Namespaces] topic on the Microsoft Developer Network."
-Credits_URL="http://msdn.microsoft.com/en-us/library/aa365247.aspx"
+Extra="<p>Based on information contained in the <a href="http://msdn.microsoft.com/en-us/library/aa365247.aspx">File Names, Paths and Namespaces</a> topic on the Microsoft Developer Network.</p>"
 Units=SysUtils
 Depends=SizeOfFile64
 Snip=260.dat
@@ -618,8 +617,7 @@ FPC=Y
 
 [PathIsRoot]
 Desc="Checks if the given path is a root directory."
-Credits="Slightly modified from code created by Steve Moss, CoCo Systems Ltd. Contributed by Bill Miller."
-Comments="Works with UNC paths and paths with drive specifiers."
+Extra="<p>Works with UNC paths and paths with drive specifiers.</p><p>Slightly modified from code created by Steve Moss, CoCo Systems Ltd. Contributed by Bill Miller.</p>"
 Units=SysUtils
 Depends=DirToPath
 Snip=354.dat
@@ -711,7 +709,7 @@ FPC=Y
 
 [SizeOfFile64]
 Desc="Gets the size of a file.  Returns -1 if the file doesn't exist or can't be accessed."
-Comments="Works with files larger than 2Gb."
+Extra="<p>Works with files larger than 2Gb.</p>"
 Units=SysUtils,Windows
 SeeAlso=SizeOfFile
 Snip=257.dat
@@ -757,8 +755,7 @@ FPC=Y
 
 [URLFromShortcut]
 Desc="Returns the URL referenced by the given URL shortcut file, or the empty string if the given file is not a shortcut file."
-Credits="Derived from a similar function published on [Torry's Delphi Pages]."
-Credits_URL="http://www.torry.net/"
+Extra="<p>Derived from a similar function published on <a href="http://www.torry.net/">Torry's Delphi Pages</a>.</p>"
 Units=IniFiles
 SeeAlso=CreateURLShortcut,IsURLShortcut
 Snip=045.dat
