--- a/csdb/collection/graphics.ini
+++ b/csdb/collection/graphics.ini
@@ -7,7 +7,7 @@
 
 [AdjustColorBrightness]
 DescEx="Adjusts the brightness of colour <var>Color</var> by a specified <var>Delta</var> in range -255..255."
-Credits="Based on code found on the former EFG's Delphi Reference Library."
+Extra="<p>Based on code found on the former EFG's Delphi Reference Library.</p>"
 Units=Windows,Graphics
 SeeAlso=AdjustBitmapBrightness
 Snip=290.dat
@@ -202,7 +202,7 @@ FPC=N
 
 [ColorToRGBTriple]
 DescEx="Converts the given <var>TColor</var> value into an RGB triple value, which is returned."
-Comments="System colours are converted to their actual values before conversion."
+Extra="<p>System colours are converted to their actual values before conversion.</p>"
 Units=Windows,Graphics
 Depends=ExtractRGB
 SeeAlso=RGBTripleToColor,ExtractRGB
@@ -227,8 +227,7 @@ FPC=N
 
 [ContrastingColor]
 Desc="Returns a colour that contrasts well with a given background colour. The returned colour is either black or white."
-Comments="System colours are converted into actual colours before the foreground colour is calculated."
-Credits="Adapted from code by Andreas Filsinger."
+Extra="<p>System colours are converted into actual colours before the foreground colour is calculated.</p><p>Adapted from code by Andreas Filsinger.</p>"
 Units=Windows,Graphics
 Depends=ColorToRGBTriple
 Snip=453.dat
@@ -300,7 +299,7 @@ FPC=N
 
 [DrawAngledText]
 DescEx="<p>Draws angled text on a canvas at position <var>X</var>,<var>Y</var>.</p><p>The value of <var>Angle</var> is specified in degrees and is accurate to one tenth of a degree.</p>"
-Comments="The canvas' current font must be a vector font otherwise the text is not angled."
+Extra="<p>The canvas' current font must be a vector font otherwise the text is not angled.</p>"
 Units=Windows,Graphics
 SeeAlso=DrawDisabledText,DrawTextOutline
 Snip=150.dat
@@ -347,7 +346,7 @@ FPC=N
 
 [DrawTextOutline]
 DescEx="<p>Draws the given text in outline on a the given canvas. The top left corner of the text is specified by the <var>X</var> and <var>Y</var> parameters.</p><p>The canvas' current brush and pen colours are used to fill and outline the text respectively.</p>"
-Comments="The canvas' current font must be a vector font otherwise nothing will be displayed."
+Extra="<p>The canvas' current font must be a vector font otherwise nothing will be displayed.</p>"
 Units=Windows,Graphics
 SeeAlso=DrawAngledText,DrawDisabledText
 Snip=099.dat
@@ -371,7 +370,7 @@ FPC=N
 
 [EllipsifyText]
 DescEx="<p>Shortens the given text if necessary to fit within <var>MaxWidth</var> pixels on the given canvas.</p><p>If <var>AsPath</var> is True the text is shortened path-wise by inserting an ellipsis in the text body, otherwise it is trunctated and an ellipsis is appended.</p>"
-Credits=Provided by Bill Miller.
+Extra="<p.>Provided by Bill Miller.</p."
 Units=Graphics,SysUtils,Classes,Windows
 Snip=161.dat
 Delphi2=Y
@@ -394,7 +393,7 @@ FPC=N
 
 [ExtractRGB]
 DescEx="Extracts constituent RGB values from the given colour and returns them via the <var>Red</var>, <var>Green</var> and <var>Blue</var> parameters."
-Comments="System colours are converted to their actual values before extracting the RGB values."
+Extra="<p>System colours are converted to their actual values before extracting the RGB values.</p>"
 Units=Graphics,Windows
 SeeAlso=ColorToRGBTriple
 Snip=112.dat
@@ -624,7 +623,7 @@ FPC=N
 
 [MakeGreyScale]
 DescEx="<p>Converts colour bitmap <var>SrcBmp</var> into a 24bit greyscale bitmap. <var>SrcBmp</var> is updated in place.</p><p>Setting the <var>Advanced</var> flag to True uses a more advanced algorithm for the conversion. When the flag is False red, blue and green values are simply averaged.</p>"
-Credits="Adapted from original code by Lucas Martín."
+Extra="<p>Adapted from original code by Lucas Martín.</p>"
 Units=SysUtils,Windows,Graphics
 Depends=CloneGraphicAsBitmap
 Snip=098.dat
@@ -648,7 +647,7 @@ FPC=N
 
 [MaxWidthOfStrings]
 Desc="Returns width of longest string in a string list when rendered in a given font."
-Credits="Closely based code by Peter Below published by the Delphi Pool."
+Extra="<p>Closely based code by Peter Below published by the Delphi Pool.</p>"
 Units=Classes,Graphics,Windows
 Depends=CreateDisplayDC
 SeeAlso=IndexOfWidestString,StringExtent
@@ -696,7 +695,7 @@ FPC=N
 
 [SetDefaultFont]
 DescEx="Sets the given <var>TFont</var> object to the default GUI font for the operating system."
-Credits="From Bill Miller's snippets collection."
+Extra="<p>From Bill Miller's snippets collection.</p>"
 Units=Windows,Graphics
 SeeAlso=SetDesktopIconFont
 Snip=343.dat
@@ -793,7 +792,7 @@ FPC=N
 
 [StringExtent]
 Desc="Returns the width and height of the given string when rendered in the specified font."
-Credits="Inspired by code by Peter Below published by the Delphi Pool."
+Extra="<p>Inspired by code by Peter Below published by the Delphi Pool.</p>"
 Units=Windows,Graphics
 Depends=CreateDisplayDC
 Snip=148.dat
@@ -1191,7 +1190,7 @@ FPC=N
 [HalftoneStretch_A]
 DisplayName="HalftoneStretch (TCanvas overload)"
 DescEx="<p>Performs a high quality stretch copy operation from canvas <var>SrcCvs</var> to <var>DestCvs</var>.</p><p>The image occupying the area defined by <var>SrcRect</var> on <var>SrcCvs</var> is stretched to fill the area defined by <var>DestRect</var> on <var>DestCvs</var>.</p>"
-Credits="Modified from code contributed by Montor."
+Extra="<p>Modified from code contributed by Montor.</p>"
 Units=Windows,Graphics,Types
 SeeAlso=HalftoneStretch_B
 Snip=379.dat
