--- a/csdb/collection/hex.ini
+++ b/csdb/collection/hex.ini
@@ -7,7 +7,7 @@
 
 [AddHexPrefix]
 Desc="Adds a valid hex prefix to the given string of hex digits."
-Comments="The hex prefix is '$' when compiled on Delphi or '0x' when compiled on C++ Builder."
+Extra="<p>The hex prefix is '$' when compiled on Delphi or '0x' when compiled on C++ Builder.</p>"
 Units=SysUtils
 Depends=StripHexPrefix
 SeeAlso=StripHexPrefix
@@ -176,7 +176,7 @@ FPC=Y
 
 [TryHexToInt]
 DescEx="<p>Attempts to convert the given hexadecimal string into a 32 bit integer.</p><p>Returns True on success and set <var>Value</var> to the converted value. Returns False on error, leaving <var>Value</var> undefined.</p>"
-Comments="The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'."
+Extra="<p>The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'.</p>"
 Depends=AddHexPrefix
 SeeAlso=HexToInt,HexToIntDef,TryHexToBuf,TryHexToInt64
 TestInfo=advanced
@@ -201,7 +201,7 @@ FPC=Y
 
 [TryHexToInt64]
 DescEx="<p>Attempts to convert the given hexadecimal string into a 64 bit integer.</p><p>Returns True on success and set <var>Value</var> to the converted value. Returns False on error, leaving <var>Value</var> undefined.</p>"
-Comments="The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'."
+Extra="</p>The hexadecimal string must contain only valid hex digits, optionally prefixed by either '$' or '0x'.</p>"
 Depends=AddHexPrefix
 SeeAlso=HexToInt64,HexToInt64Def,TryHexToBuf,TryHexToInt
 TestInfo=advanced
