--- a/csdb/collection/maths.ini
+++ b/csdb/collection/maths.ini
@@ -7,7 +7,7 @@
 
 [AllDigitsDifferent]
 Desc="Checks if all the digits of the given integer are different to each other."
-Comments="An example of an integer with all digits different is 15862."
+Extra="<p>An example of an integer with all digits different is 15862.</p>"
 SeeAlso=AllDigitsSame
 Snip=498.dat
 Delphi2=N
@@ -30,7 +30,7 @@ FPC=Y
 
 [AllDigitsSame]
 Desc="Checks if all the digits of the given integer are the same."
-Comments="An example of an integer with all digits the same is 777777."
+Extra="<p>An example of an integer with all digits the same is 777777.</p>"
 SeeAlso=AllDigitsDifferent,RepeatedDigits
 Snip=499.dat
 Delphi2=N
@@ -53,7 +53,7 @@ FPC=Y
 
 [DigitCount]
 Desc="Counts the number of digits in the given integer."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=DigitCount2,DigitCountR
 TestInfo=advanced
 Snip=202.dat
@@ -77,7 +77,7 @@ FPC=Y
 
 [DigitCount2]
 Desc="Counts the number of digits in the given integer."
-Credits="Based on code suggested by Don Rowlett."
+Extra="<p>Based on code suggested by Don Rowlett.</p>"
 Units=Math
 SeeAlso=DigitCount,DigitCountR
 TestInfo=advanced
@@ -102,7 +102,7 @@ FPC=Y
 
 [DigitCountR]
 Desc="Counts the number of digits in the given integer using recursion."
-Credits="Contributed by Rubem Nascimento da Rocha."
+Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 SeeAlso=DigitCount,DigitCount2
 TestInfo=advanced
 Snip=417.dat
@@ -126,7 +126,7 @@ FPC=Y
 
 [Factorial]
 Desc="Calculates the factorial of the given number."
-Credits="Adapted from code contributed by Don Rowlett."
+Extra="<p>Adapted from code contributed by Don Rowlett.</p>"
 Snip=231.dat
 Delphi2=N
 Delphi3=N
@@ -193,7 +193,7 @@ FPC=Y
 
 [NormalizeRect]
 DescEx="Normalises the given rectangle so that <var>Left</var> &lt;= <var>Right</var> and <var>Top</var> &lt;= <var>Bottom</var>."
-Credits="Inspired by code published by Marco Cantu in supplementary chapter 22 of Mastering Delphi 5."
+Extra="<p>Inspired by code published by Marco Cantù in supplementary chapter 22 of Mastering Delphi 5.</p>"
 Units=Windows
 Depends=ExchangeInt
 SeeAlso=IsRectNormal
@@ -243,7 +243,7 @@ FPC=Y
 
 [RectHeight]
 DescEx="<p>Returns the height of the given rectangle.</p><p>The return value is always non-negative even if the rectangle is not normalized.</p>"
-Comments="Adopts the convention that the rectangle's bottom and right are not included in it, so that height = bottom - top."
+Extra="<p>Adopts the convention that the rectangle's bottom and right are not included in it, so that height = bottom - top.</p>"
 Units=Windows
 SeeAlso=RectSize,RectWidth,NormalizeRect
 Snip=127.dat
@@ -267,7 +267,7 @@ FPC=Y
 
 [RectSize]
 DescEx="<p>Returns the size of the given rectangle.</p><p>The returned dimensions are always non-negative even if the rectangle is not normalized.</p>"
-Comments="Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left and height = bottom - top."
+Extra="<p>Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left and height = bottom - top.</p>"
 Units=Windows
 Depends=RectWidth,RectHeight
 SeeAlso=RectWidth,RectHeight,NormalizeRect
@@ -292,7 +292,7 @@ FPC=Y
 
 [RectWidth]
 DescEx="<p>Returns the width of the given rectangle.</p><p>The return value is always non-negative even if the rectangle is not normalized.</p>"
-Comments="Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left."
+Extra="<p>Adopts the convention that the rectangle's bottom and right are not included in it, so that width = right - left.</p>"
 Units=Windows
 SeeAlso=RectSize,RectHeight,NormalizeRect
 Snip=126.dat
@@ -316,8 +316,7 @@ FPC=Y
 
 [RepeatedDigits]
 Desc="Checks if the given integer contains only a single repeated digit."
-Comments="An example of an integer with a single repeated digit is 5555."
-Credits="Slightly modified from code contributed by Rubem Rocha."
+Extra="<p>An example of an integer with a single repeated digit is 5555.</p><p>Slightly modified from code contributed by Rubem Rocha.</p>"
 Units=SysUtils,Math
 SeeAlso=AllDigitsSame
 Snip=497.dat
@@ -341,7 +340,7 @@ FPC=Y
 
 [ReverseNumber]
 DescEx="<p>Reverses the digits of integer <var>AValue</var> and returns the resulting value.</p><p><var>AValue</var> should be positive: zero is always returned for negative integers.</p>"
-Credits="Contributed by Rubem Nascimento da Rocha."
+Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 SeeAlso=ReverseNumberR
 Snip=405.dat
 Delphi2=N
@@ -364,7 +363,7 @@ FPC=Y
 
 [SignOfFloat]
 Desc="Returns the sign of the given floating point value. Returns -1 if the value is positive, 0 if zero or +1 if negative."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=SignOfInt
 Snip=205.dat
 Delphi2=Y
@@ -387,7 +386,7 @@ FPC=Y
 
 [SignOfInt]
 Desc="Returns the sign of the given integer. Returns -1 if the integer is positive, 0 if zero or +1 if negative."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=SignOfFloat
 Snip=206.dat
 Delphi2=N
