--- a/csdb/collection/multimedia.ini
+++ b/csdb/collection/multimedia.ini
@@ -7,7 +7,7 @@
 
 [PlaySound]
 Desc="Plays sound from the given wave (.wav) file asynchronously."
-Credits="From Bill Miller's snippets collection."
+Extra="<p>From Bill Miller's snippets collection.</p>"
 Units=MMSystem
 Snip=403.dat
 Delphi2=Y
