--- a/csdb/collection/registry.ini
+++ b/csdb/collection/registry.ini
@@ -29,7 +29,7 @@ FPC=Y
 
 [RegKeyList]
 DescEx="<p>Retrieves a list of keys contained in registry sub-key <var>ASubKey</var> within root key <var>ARootKey</var>.</p><p>The key names are stored in string list <var>AKeyList</var>. If there are no keys or there is an error then <var>AKeyList</var> is emptied.</p>"
-Credits="Modified from code contributed by Guru Kathiresan."
+Extra="<p>Modified from code contributed by Guru Kathiresan.</p>"
 SeeAlso=RegValueList
 Units=Windows,Classes,Registry
 Snip=392.dat
@@ -53,7 +53,7 @@ FPC=Y
 
 [RegValueList]
 DescEx="<p>Retrieves a list of values names contained in registry sub-key <var>ASubKey</var> within root key <var>ARootKey</var>.</p><p>The values names are stored in string list <var>AValueList</var>. If there are no value names, or there is an error, then <var>AValueList</var> is emptied.</p>"
-Credits="Modified from code contributed by Guru Kathiresan."
+Extra="<p>Modified from code contributed by Guru Kathiresan.</p>"
 SeeAlso=RegKeyList
 Units=Windows,Classes,Registry
 Snip=393.dat
