--- a/csdb/collection/string.ini
+++ b/csdb/collection/string.ini
@@ -7,7 +7,7 @@
 
 [AddThousandSeparator]
 DescEx="<p>Adds the &quot;thousands separator&quot; specified by <var>C</var> at the correct location(s) in string <var>S</var> and returns the result.</p><p><var>S</var> is assumed to be the string representation of a positive whole number.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=AddDefThousandSeparator
 Snip=162.dat
 Delphi2=Y
@@ -76,7 +76,7 @@ FPC=Y
 
 [CountUnquotedWords]
 DescEx="Returns the number of <em>space</em> delimited words in string <var>S</var>. Any words enclosed by the quote character <var>AQuote</var> are counted as one word."
-Credits="Contributed by Rubem Rocha."
+Extra="<p>Contributed by Rubem Rocha.</p>"
 Units=Classes
 SeeAlso=ExplodeUnquotedWords,CountWords,WordCount
 Snip=183.dat
@@ -100,7 +100,7 @@ FPC=Y
 
 [DelAllStr]
 DescEx="<p>Deletes all occurrences of sub-string <var>Needle</var> from string <var>HayStack</var> and returns the resulting string.</p><p><var>HayStack</var> is returned unchanged if it does not contain <var>Needle</var>.</p><p>The search is case sensitive.</p>"
-Credits="Renamed from a routine contributed by Bill Miller."
+Extra="<p>Renamed from a routine contributed by Bill Miller.</p>"
 SeeAlso=DelAllText,DelStr,DelText
 Units=SysUtils
 Snip=477.dat
@@ -124,7 +124,7 @@ FPC=Y
 
 [DelAllText]
 DescEx="<p>Deletes all occurrences of text <var>Needle</var> from text <var>HayStack</var> and returns the resulting string.</p><p><var>HayStack</var> is returned unchanged if it does not contain <var>Needle</var>.</p><p>The search is case insensitive.</p>"
-Credits="Renamed from a routine contributed by Bill Miller."
+Extra="<p>Renamed from a routine contributed by Bill Miller.</p>"
 SeeAlso=DelAllStr,DelStr,DelText
 Units=SysUtils
 Snip=478.dat
@@ -148,7 +148,7 @@ FPC=Y
 
 [DelStr]
 DescEx="<p>Deletes the first occurrence of sub-string <var>Needle</var> from string <var>HayStack</var> and returns the resulting string.</p><p><var>HayStack</var> is returned unchanged if it does not contain <var>Needle</var>.</p><p>The search is case sensitive.</p>"
-Credits="Renamed from a routine contributed by Bill Miller."
+Extra="<p>Renamed from a routine contributed by Bill Miller.</p>"
 SeeAlso=DelAllStr,DelAllText,DelText
 Units=SysUtils
 Snip=479.dat
@@ -172,7 +172,7 @@ FPC=Y
 
 [DelText]
 DescEx="<p>Deletes the first occurrence of text <var>Needle</var> from text <var>HayStack</var> and returns the resulting string.</p><p><var>HayStack</var> is returned unchanged if it does not contain <var>Needle</var>.</p><p>The search is case insensitive.</p>"
-Credits="Renamed from a routine contributed by Bill Miller."
+Extra="<p>Renamed from a routine contributed by Bill Miller.</p>"
 SeeAlso=DelAllStr,DelAllText,DelStr
 Units=SysUtils
 Snip=480.dat
@@ -196,7 +196,7 @@ FPC=Y
 
 [DOSLineBreaks]
 Desc="Converts all Unix and Mac line endings in the given string to DOS line endings and returns the result."
-Comments="Any existing DOS line breaks are preserved."
+Extra="<p>Any existing DOS line breaks are preserved.</p>"
 Units=SysUtils
 SeeAlso=UnixLineBreaks
 Snip=190.dat
@@ -220,7 +220,7 @@ FPC=Y
 
 [ExplodeUnquotedWords]
 DescEx="<p>Extracts a list of space delimited words from string <var>S</var> and returns the number of words found. The extracted words are stored in stringlist <var>List</var>, overwriting any existing contents.</p><p>Any words enclosed by the quote character <var>AQuote</var> are kept together as one word.</p>"
-Credits="Contributed by Rubem Rocha."
+Extra="<p>Contributed by Rubem Rocha.</p>"
 Units=Classes
 SeeAlso=ExplodeWords,ExplodeStr
 Snip=181.dat
@@ -358,8 +358,7 @@ FPC=Y
 
 [LastChar]
 DescEx="<p>Returns the last character of the given string.</p><p>It is an error if the string is empty.</p>"
-Credits="Contributed by Guru Kathiresan."
-Comments="This routine is not suitable for use with multi-byte character sets."
+Extra="<p>This routine is not suitable for use with multi-byte character sets.</p><p>Contributed by Guru Kathiresan.</p>"
 SeeAlso=StripLastChar
 Snip=381.dat
 Delphi2=Y
@@ -1000,7 +999,7 @@ FPC=Y
 
 [PadCenter]
 DescEx="Centre aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded as necessary with character <var>AChar</var>."
-Comments="When an odd number of padding characters is required, the extra character is added on the right."
+Extra="<p>When an odd number of padding characters is required, the extra character is added on the right.</p>"
 SeeAlso=PadLeft,PadRight
 Snip=246.dat
 Delphi2=Y
@@ -1023,7 +1022,7 @@ FPC=Y
 
 [PadLeft]
 DescEx="Left aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded on the right as necessary with character <var>AChar</var>."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=PadCenter,PadRight
 Snip=247.dat
 Delphi2=Y
@@ -1046,7 +1045,7 @@ FPC=Y
 
 [PadRight]
 DescEx="<p>Right aligns string <var>AString</var> within a string of size <var>AWidth</var> and returns the result. The string is padded on the left as necessary with character <var>AChar</var>.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 SeeAlso=PadCenter,PadLeft
 Snip=248.dat
 Delphi2=Y
@@ -1091,7 +1090,7 @@ FPC=Y
 
 [ReverseStr]
 Desc="Returns the reverse of the given string."
-Credits="Renamed from a routine contributed by Rubem Nascimento da Rocha."
+Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStrR
 TestInfo=advanced
@@ -1116,8 +1115,7 @@ FPC=Y
 
 [ReverseStrR]
 Desc="Returns the reverse of the given string."
-Credits="Renamed from a routine contributed by Rubem Nascimento da Rocha."
-Comments="Uses recursion."
+Extra="<p>Uses recursion.</p><p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils,StrUtils
 SeeAlso=ReverseStr
 TestInfo=advanced
@@ -1165,7 +1163,7 @@ FPC=Y
 
 [StripAccelChars]
 DescEx="Strips all accelerator ('<mono>&amp;</mono>') characters from the given string and returns the resulting string."
-Credits="Renamed from a routine contributed by Rubem Nascimento da Rocha."
+Extra="<p>Renamed from a routine contributed by Rubem Nascimento da Rocha.</p>"
 Units=SysUtils
 TestInfo=advanced
 Snip=440.dat
@@ -1212,7 +1210,7 @@ FPC=Y
 
 [StrToken]
 DescEx="<p>Finds and returns the first token in string <var>S</var>, delimited by the given separator character. The token and separator are removed from <var>S</var>.</p><p>If no separators are found then the whole of <var>S</var> is returned and <var>S</var> is then set to the empty string.</p>"
-Credits="Slightly modified from code contributed by Guru Kathiresan."
+Extra="<p>Slightly modified from code contributed by Guru Kathiresan.</p>"
 Units=SysUtils
 SeeAlso=StrTokenCount
 Snip=537.dat
@@ -1236,7 +1234,7 @@ FPC=Y
 
 [StrTokenCount]
 DescEx="<p>Counts and returns the number of tokens in string <var>S</var> delimited by the given separator character.</p><p>Empty strings before separators are counted as tokens, but an empty string after the last separator is not.</p>"
-Credits="Contributed by Guru Kathiresan."
+Extra="<p>Contributed by Guru Kathiresan.</p>"
 SeeAlso=StrToken
 Depends=StrToken
 Snip=538.dat
@@ -1283,7 +1281,7 @@ FPC=Y
 
 [TrimChar]
 DescEx="Trims occurrences of character <var>C</var> from both ends of string <var>S</var> and returns the result."
-Comments="The character to be trimmed must be a single byte character."
+Extra="<p>The character to be trimmed must be a single byte character.</p>"
 Depends=TrimLeftChar,TrimRightChar
 SeeAlso=TrimLeftChar,TrimRightChar
 Snip=195.dat
@@ -1307,7 +1305,7 @@ FPC=Y
 
 [TrimLeftChar]
 DescEx="Trims occurrences of character <var>C</var> from the start of string <var>S</var> and returns the result."
-Comments="The character to be trimmed must be a single byte character."
+Extra="<p>The character to be trimmed must be a single byte character.</p>"
 SeeAlso=TrimChar,TrimRightChar
 Snip=196.dat
 Delphi2=Y
@@ -1330,7 +1328,7 @@ FPC=Y
 
 [TrimRightChar]
 DescEx="Trims occurrences of character <var>C</var> from the end of string <var>S</var> and returns the result."
-Comments="The character to be trimmed must be a single byte character."
+Extra="<p>The character to be trimmed must be a single byte character.</p>"
 SeeAlso=TrimChar,TrimLeftChar
 Snip=197.dat
 Delphi2=Y
@@ -1353,7 +1351,7 @@ FPC=Y
 
 [TrimStringList]
 DescEx="<p>Removes lines prefixed by <var>Prefix</var> from string list <var>List</var>, updating it in place.</p><p>Set <var>Prefix</var> to the empty string to remove empty lines, including those containing only white space.</p>"
-Credits="Closely based on a routine contributed by Joe Donth."
+Extra="<p>Closely based on a routine contributed by Joe Donth.</p>"
 Units=SysUtils,Classes
 SeeAlso=ExplodeStr,JoinStr
 Snip=131.dat
@@ -1377,7 +1375,7 @@ FPC=Y
 
 [UnixLineBreaks]
 Desc="Converts all DOS and Mac line endings in the given string to Unix line endings and returns the result."
-Comments="Any existing Unix line breaks are preserved."
+Extra="<p>Any existing Unix line breaks are preserved.</p>"
 Units=SysUtils
 SeeAlso=DOSLineBreaks
 Snip=191.dat
