--- a/csdb/collection/sys.ini
+++ b/csdb/collection/sys.ini
@@ -7,7 +7,7 @@
 
 [DebuggerPresent]
 Desc="Indicates whether the calling process is running within a debugger."
-Credits="Contributed by DennisLV."
+Extra="<p>Contributed by DennisLV.</p>"
 Units=Windows
 Snip=136.dat
 Delphi2=Y
@@ -30,8 +30,7 @@ FPC=Y
 
 [Delay]
 Desc="Delays processing for the given number of milliseconds without processing any messages."
-Credits="Modified in line with Pause routine per suggestions by Montor."
-Comments="This routine is aimed at console applications and threads that have no message queue. Normal GUI applications should not use this routine."
+Extra="<p>This routine is aimed at console applications and threads that have no message queue. Normal GUI applications should not use this routine.</p><p>Modified in line with Pause routine per suggestions by Montor.</p>"
 Units=Windows
 SeeAlso=Pause
 Snip=265.dat
@@ -55,7 +54,7 @@ FPC=Y
 
 [EmptyKeyQueue]
 Desc="Empties all keyboard messages from the message queue of any window belonging to the current thread."
-Credits="Contributed by DennisLV."
+Extra="<p>Contributed by DennisLV.</p>"
 Units=Windows,Messages
 SeeAlso=SendKeysToWindow
 Snip=120.dat
@@ -79,7 +78,7 @@ FPC=Y
 
 [GetBiosVendor]
 Desc="Returns the name of the computer's BIOS vendor."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetProcessorIdentifier,GetProcessorName,GetSystemManufacturer,GetSystemProductName
 Snip=511.dat
@@ -103,7 +102,7 @@ FPC=Y
 
 [GetCharFromVirtualKey]
 DescEx="<p>Translates virtual key code <var>AKey</var> into one or more characters which are returned as a string.</p><p>An empty string is returned if <var>AKey</var> can't be translated.</p>"
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=Windows
 Snip=203.dat
 Delphi2=Y
@@ -172,7 +171,7 @@ FPC=N
 
 [GetProcessorIdentifier]
 Desc="Returns the identifier of the computer's processor."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorName,GetSystemManufacturer,GetSystemProductName
 Snip=512.dat
@@ -196,7 +195,7 @@ FPC=Y
 
 [GetProcessorName]
 Desc="Return the name of the computer's processor."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetSystemManufacturer,GetSystemProductName
 Snip=513.dat
@@ -220,7 +219,7 @@ FPC=Y
 
 [GetSystemManufacturer]
 Desc="Returns the name of the computer's manufacturer."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetProcessorName,GetSystemProductName
 Snip=514.dat
@@ -244,7 +243,7 @@ FPC=Y
 
 [GetSystemProductName]
 Desc="Returns the system product name."
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,Registry
 SeeAlso=GetBiosVendor,GetProcessorIdentifier,GetProcessorName,GetSystemManufacturer
 Snip=515.dat
@@ -338,7 +337,7 @@ FPC=Y
 
 [HostIPAddress]
 Desc="Detects and returns the machine's local IP address, or 0.0.0.0 if the address is not found."
-Credits="Contributed by DennisLV."
+Extra="<p>Contributed by DennisLV.</p>"
 Units=SysUtils,Windows,WinSock
 Snip=108.dat
 Delphi2=Y
@@ -361,7 +360,7 @@ FPC=Y
 
 [IsAdmin]
 Desc="Checks if the current user has administrator privileges."
-Credits="Contributed by Rubem Nascimento da Rocha."
+Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 Units=Windows
 Snip=404.dat
 Delphi2=N
@@ -430,8 +429,7 @@ FPC=Y
 
 [IsRunningOnBattery]
 Desc="Checks if the computer is running on battery power and returns True if so or False when running on mains or if the power status is unknown."
-Credits="Based on code published on the [Delphi FAQ]."
-Credits_URL="http://www.delphifaq.com/"
+Extra="<p>Based on code published on the <a href="http://www.delphifaq.com/">Delphi FAQ</a>.</p>"
 Units=Windows
 SeeAlso=RemainingBatteryPercent
 Snip=146.dat
@@ -455,8 +453,7 @@ FPC=Y
 
 [Pause]
 DescEx="Pauses for <var>ADelay</var> milliseconds before returning."
-Comments="Performs a busy wait."
-Credits="Modifications to handle potential clock roll over and sleeping suggested by Montor."
+Extra="<p>Performs a busy wait.</p><p>Modifications to handle potential clock roll over and sleeping suggested by Montor.</p>"
 Units=Windows
 Depends=ProcessMessages
 SeeAlso=Delay
@@ -505,7 +502,7 @@ FPC=Y
 
 [ProgramFileSpec]
 Desc=Returns the fully specified path and file name of the executing program.
-Credits="Based on code suggested by Alan Bailey."
+Extra="<p>Based on code suggested by Alan Bailey.</p>"
 SeeAlso=ProgramFileName,ProgramPath,ProgramName
 Snip=104.dat
 Delphi2=Y
@@ -551,7 +548,7 @@ FPC=Y
 
 [ProgramPath]
 Desc="Returns the directory containing the executing program."
-Credits="Based on code suggested by Alan Bailey."
+Extra="<p>Based on code suggested by Alan Bailey.</p>"
 Units=SysUtils
 Depends=ProgramFileSpec
 SeeAlso=ProgramFileSpec,ProgramFileName,ProgramName
@@ -576,8 +573,7 @@ FPC=Y
 
 [RemainingBatteryPercent]
 Desc="Returns remaining battery life as a percentage (0..100), or -1 if the remaining battery life is unknown."
-Credits="Based on code published on the [Delphi FAQ]."
-Credits_URL="http://www.delphifaq.com/"
+Extra="<p>Based on code published on the <a href="http://www.delphifaq.com/">Delphi FAQ</a>.</p>"
 Units=Windows
 SeeAlso=IsRunningOnBattery
 Snip=145.dat
@@ -601,7 +597,7 @@ FPC=Y
 
 [SendKeysToWindow]
 DescEx="Sends key strokes to the window with the handle <var>HWnd</var> that correspond to the characters in string <var>Text</var>."
-Credits="Based on code suggested by DennisLV."
+Extra="<p>Based on code suggested by DennisLV.</p>"
 Units=Windows,Messages
 SeeAlso=EmptyKeyQueue,PostKeyEx32
 Snip=121.dat
