--- a/csdb/collection/utils.ini
+++ b/csdb/collection/utils.ini
@@ -163,7 +163,7 @@ FPC=Y
 
 [CompilerVer]
 DescEx="<p>Returns the version of the Delphi or Free Pascal compiler used to compile the program.</p><p>0.0 is returned on error, or if the compiler is not recognised.</p>"
-Comments="For Delphi 2 to 5 the compiler version is calculated. From Delphi 6 on the compiler version is as reported by Delphi. For Free Pascal, major versions 1 & 2 are detected."
+Extra="<p>For Delphi 2 to 5 the compiler version is calculated. From Delphi 6 on the compiler version is as reported by Delphi. For Free Pascal, major versions 1 &amp; 2 are detected.</p>"
 Snip=273.dat
 Delphi2=Y
 Delphi3=Y
@@ -185,7 +185,7 @@ FPC=Y
 
 [EndianSwap]
 Desc="Swaps the given cardinal value between little endian and big endian format, and vica versa, and returns the result."
-Credits="Contributed by Montor"
+Extra="<p>Contributed by Montor.</p>"
 Snip=293.dat
 Delphi2=Y
 Delphi3=Y
@@ -297,7 +297,7 @@ FPC=Y
 
 [IntToNumberText]
 Desc="Returns the English text representation of the given integer."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>Adapted from code contributed by Bill Miller.</p>"
 Units=SysUtils
 SeeAlso=FloatToNumberText,IntToRoman
 Snip=218.dat
@@ -343,8 +343,7 @@ FPC=Y
 
 [IntToRoman]
 DescEx="Converts non negative integer <var>AValue</var> into a string containing its roman numeral representation."
-Comments="For values greater than 4999 the output string can get very long and difficult to read."
-Credits="Modified from code contributed by Michael Rockett."
+Extra="<p>For values greater than 4999 the output string can get very long and difficult to read.</p><p>Modified from code contributed by Michael Rockett.</p>"
 SeeAlso=IntToNumberText
 Snip=457.dat
 Delphi2=N
@@ -367,7 +366,7 @@ FPC=Y
 
 [IsSubClassOf]
 DescEx="Checks if object instance <var>AnInstance</var> is a sub-class of, or the same class as, class <var>AClass</var>."
-Credits="Contributed by Rubem Nascimento da Rocha."
+Extra="<p>Contributed by Rubem Nascimento da Rocha.</p>"
 Snip=372.dat
 Delphi2=Y
 Delphi3=Y
@@ -389,7 +388,7 @@ FPC=Y
 
 [Percentage]
 DescEx="<p>Calculates and returns the value of <var>A</var> &#247; <var>B</var> as a percentage, rounded to the nearest whole number.</p><p><var>B</var> must be non-zero.</p>"
-Credits="Modified from code contributed by Guru Kathiresan."
+Extra="<p>Modified from code contributed by Guru Kathiresan.</p>"
 SeeAlso=PercentageStr
 Snip=469.dat
 Delphi2=Y
@@ -412,7 +411,7 @@ FPC=Y
 
 [PercentageStr]
 DescEx="<p>Calculates and returns the value of <var>A</var> &#247; <var>B</var> as a percentage string, rounded to the nearest whole number.</p><p><var>B</var> must be non-zero.</p>"
-Credits="Contributed by Guru Kathiresan."
+Extra="<p>Contributed by Guru Kathiresan.</p>"
 Units=SysUtils
 Depends=Percentage
 SeeAlso=Percentage
