--- a/csdb/collection/web.ini
+++ b/csdb/collection/web.ini
@@ -53,7 +53,7 @@ FPC=N
 
 [DownloadURLToFile]
 Desc="Downloads the contents of a file at the specified URL and stores in the given local file. Returns True if the download succeeds and False on failure."
-Comments="A connection to the internet must be open for the download to succeed."
+Extra="<p>A connection to the internet must be open for the download to succeed.</p>"
 Units=UrlMon,Windows,SysUtils
 SeeAlso=IsValidURLProtocol
 Snip=027.dat
