--- a/csdb/collection/windows.ini
+++ b/csdb/collection/windows.ini
@@ -77,7 +77,7 @@ FPC=Y
 
 [DisableTreeViewToolTips]
 Desc="Disables the tool tips that are displayed in the given treeview control when the mouse is hovered over an item that is cropped because it is too large to display."
-Comments="This routine is of use with earlier versions of Delphi in which the tree view component does not have a property to switch tool tips on and off."
+Extra="<p>This routine is of use with earlier versions of Delphi in which the tree view component does not have a property to switch tool tips on and off.</p>"
 Units=Windows,ComCtrls,CommCtrl
 Snip=507.dat
 Delphi2=N
@@ -124,7 +124,7 @@ FPC=Y
 
 [GetIdleTime]
 Desc="Returns the time ellapsed since the last user input."
-Credits="Modified from code contributed by Topellina."
+Extra="<p>Modified from code contributed by Topellina.</p>"
 Units=Windows
 Snip=371.dat
 Delphi2=N
@@ -171,7 +171,7 @@ FPC=Y
 
 [GetWindowTitle]
 DescEx="<p>Returns the title of the window with the given handle.</p><p>Titles of more than 255 characters are truncated.</p>"
-Credits="Contributed by Guru Kathiresan."
+Extra="<p>Contributed by Guru Kathiresan.</p>"
 Units=Windows
 Snip=500.dat
 Delphi2=Y
@@ -265,7 +265,7 @@ FPC=Y
 
 [MemoCursorPos]
 DescEx="Returns a <var>TPoint</var> value containing the coordinates of the cursor in the given memo control."
-Credits="Based on code contributed by Shlomo Abuisak."
+Extra="<p>Based on code contributed by Shlomo Abuisak.</p>"
 Units=Messages,Windows,StdCtrls
 Snip=334.dat
 Delphi2=Y
@@ -288,7 +288,7 @@ FPC=N
 
 [ResourceExists]
 DescEx="Checks if a resource with name <var>ResName</var> and type <var>ResType</var> exists in the module with handle <var>Module</var>."
-Comments="This routine is language agnostic: it takes no account of the language of the required resource."
+Extra="<p>This routine is language agnostic: it takes no account of the language of the required resource.</p>"
 Units=Windows
 SeeAlso=ResourceExistsEx
 Snip=198.dat
@@ -359,7 +359,7 @@ FPC=Y
 
 [SetTransparencyLevel]
 DescEx="Sets the transparency level of the window with handle <var>HWnd</var> to the value given by <var>Level</var>."
-Comments="This function requires that the window supports layers. The transparency level is in the range [0..255]."
+Extra="<p>This function requires that the window supports layers. The transparency level is in the range [0..255].</p>"
 Units=Windows
 Depends=WindowSupportsLayers
 SeeAlso=DisableLayersSupport,EnableLayersSupport,WindowSupportsLayers
@@ -384,7 +384,7 @@ FPC=Y
 
 [TreeNodeChildCount]
 Desc="Returns the number of child nodes of the given tree node."
-Credits="Derived from code contributed by Bill Miller."
+Extra="<p>Derived from code contributed by Bill Miller.</p>"
 Units=ComCtrls
 Snip=508.dat
 Delphi2=Y
@@ -455,7 +455,7 @@ FPC=N
 
 [WindowScrollbars]
 Desc="Returns a value that specifies which, if any, scroll bars are displayed by the window with the given handle."
-Credits="Based on code by Peter Below from the now defunct Delphi Pool website."
+Extra="<p>Based on code by Peter Below from the now defunct Delphi Pool website.</p>"
 Units=Windows,StdCtrls
 SeeAlso=HScrollbarHeight,VScrollbarWidth,WinControlScrollbars
 Snip=213.dat
