--- a/csdb/collection/winsys.ini
+++ b/csdb/collection/winsys.ini
@@ -122,8 +122,8 @@ FPC=Y
 
 [IsVista]
 Desc="Checks if the host operating system is Windows Vista or later."
-Credits="Contributed by Laurent Pierre."
-Comments="Works correctly even if the application has defined a Windows XP (or other) compatibility mode."
+Extra="<p>Contributed by Laurent Pierre.</p>"
+Extra="<p>Works correctly even if the application has defined a Windows XP (or other) compatibility mode.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsWindows7
 Snip=151.dat
@@ -170,7 +170,7 @@ FPC=Y
 
 [IsWindows7]
 Desc="Checks if the host operating system is Windows 7 (or Windows Server 2008 R2) or later."
-Comments="Works correctly even if the application has defined a Windows Vista (or other) compatibility mode."
+Extra="<p>Works correctly even if the application has defined a Windows Vista (or other) compatibility mode.</p>"
 Units=Windows
 SeeAlso=IsWin9x,IsWinNT,IsWow64,IsTabletOS,IsMediaCenterOS,IsVista
 Snip=292.dat
