--- a/csdb/collection/shell.ini
+++ b/csdb/collection/shell.ini
@@ -53,7 +53,7 @@ FPC=N
 
 [CreateShellLink]
 DescEx="<p>Creates a shell link named <var>LinkFileName</var> that is a shortcut to file <var>AssocFileName</var> with descriprion <var>Desc</var>.</p><p>The program executed by the shortcut has working directory <var>WorkDir</var> and is passed command line <var>Args</var>.</p><p>If <var>IconFileName</var> is not empty then the shortcut's icon is extracted from file <var>IconFileName</var> at index <var>IconIdx</var>.</p><p>Returns True on success or False on error.</p>"
-Credits="Derived from sample C code in the Windows SDK."
+Extra="<p>Derived from sample C code in the Windows SDK.</p>"
 Units=ShlObj,ActiveX
 SeeAlso=LoadShellLink,IsShellLink,FileFromShellLink
 Snip=015.dat
@@ -123,7 +123,7 @@ FPC=Y
 
 [ExploreFile]
 DescEx="<p>Opens Windows Explorer with the given file name selected.</p><p>Returns True if the file exists and Explorer can be started or False otherwise.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=ShellAPI,Windows,SysUtils
 SeeAlso=ExploreFolder
 Snip=089.dat
@@ -239,7 +239,7 @@ FPC=N
 
 [GetDesktopFolder]
 Desc="Returns the path to the current user's desktop."
-Credits="Modified from code in Bill Miller's snippets collection."
+Extra="<p>Modified from code in Bill Miller's snippets collection.</p>"
 SeeAlso=SpecialFolderPath,CommonFilesFolder,ProgramFilesFolder,SystemFolder,TempFolder,WindowsFolder
 Depends=IsSpecialFolderSupported,SpecialFolderPath
 Units=SysUtils,ShlObj
@@ -264,7 +264,7 @@ FPC=N
 
 [GetFileType]
 DescEx="<p>Returns a description of the file type of <var>FilePath</var>, which must be a file or folder.</p><p>If <var>FilePath</var> does not exist then the empty string is returned.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=ShellAPI
 SeeAlso=GetGenericFileType
 Snip=186.dat
@@ -288,7 +288,7 @@ FPC=Y
 
 [GetGenericFileType]
 DescEx="<p>Returns a description of the file type of <var>FileNameOrExt</var> which is interpreted either as a file name or, if it has a leading dot, as an extension.</p><p>If <var>FileNameOrExt</var> is a file name with no extension then &quot;File&quot; is returned.</p>"
-Credits="Contributed by Bill Miller."
+Extra="<p>Contributed by Bill Miller.</p>"
 Units=Windows,ShellAPI
 SeeAlso=GetFileType
 Snip=185.dat
@@ -312,8 +312,7 @@ FPC=Y
 
 [GetKnownFolderPath]
 DescEx="Returns the &quot;known folder path&quot; specified by <var>FolderID</var>, or the empty string if <var>FolderID</var> is not valid on the host operating system."
-Credits="Contributed by Ariel Rivas."
-Comments="This routine requires Windows Vista or later."
+Extra="<p>This routine requires Windows Vista or later.</p><p>Contributed by Ariel Rivas.<p>"
 Units=ShlObj,ActiveX
 SeeAlso=SpecialFolderPath
 Snip=502.dat
@@ -361,7 +360,7 @@ FPC=Y
 
 [LoadShellLink]
 DescEx="<p>Creates a shell link object that permits the shell link named by <var>LinkFileName</var> to be interogated and manipulated.</p><p>Returns the object's <var><a href="http://msdn.microsoft.com/en-us/library/windows/desktop/bb774950">IShellLink</a></var> interface or nil if <var>LinkFileName</var> is not a shell link.</p>"
-Comments=COM must be initialized before this function is used.
+Extra="<p>COM must be initialized before this function is used.</p>"
 Units=ActiveX,ShlObj
 SeeAlso=CreateShellLink,IsShellLink,FileFromShellLink
 Snip=086.dat
@@ -431,8 +430,7 @@ FPC=N
 
 [ShowFindFilesDlg]
 DescEx="<p>Displays the Windows file search window ready for searching the given folder.</p><p>Returns True if the search window is shown or False if can't be displayed.</p>"
-Credits="Based on sample code by Allan Carlton."
-Comments="The file search window will appear differently on different versions of Windows."
+Extra="<p>The file search window will appear differently on different versions of Windows.</p><p>Based on sample code by Allan Carlton.</p>"
 Units=ShellAPI,Windows
 SeeAlso=ShowShellPropertiesDlg
 Snip=021.dat
@@ -456,8 +454,7 @@ FPC=Y
 
 [ShowShellPropertiesDlg]
 DescEx="<p>Shows the Windows shell properties dialogue box for the given file system object.</p><p>The dialogue box is shown non-modally.</p>"
-Comments="The file system object must be a drive, a folder or a file. If the object does not exist Windows will display an error dialogue box."
-Credits="Adapted from code contributed by Bill Miller."
+Extra="<p>The file system object must be a drive, a folder or a file. If the object does not exist Windows will display an error dialogue box.</p><p>Adapted from code contributed by Bill Miller.</p>"
 Units=ShellAPI
 SeeAlso=ShowFindFilesDlg
 Snip=179.dat
@@ -505,7 +502,7 @@ FPC=N
 
 [TaskbarHandle]
 Desc="Returns the window handle of the Windows task bar."
-Credits="Based on sample code by Michael Beck in an article formerly on Borland Code Central."
+Extra="<p>Based on sample code by Michael Beck in an article formerly on Borland Code Central.</p>"
 Units=Windows
 SeeAlso=TaskbarBounds,TrayHandle
 Snip=046.dat
